[package]
name = "kaspa_script_address_py"
rust-version = "1.83.0"
authors = ["suprtypo@pm.me"]
license-file = "LICENSE"
edition = "2021"

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py312"] }
kaspa-consensus-core = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.16.1" }
kaspa-addresses = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.16.1" }
kaspa-txscript = { git = "https://github.com/kaspanet/rusty-kaspa.git", tag = "v0.16.1" }
hex = "0.4.3"
